@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<gresources>
+  <gresource prefix="/org/webkitgtk/inspector/UserInterface">
+    <file>inspectorPageIndex.html</file>
+  </gresource>
+</gresources>
