@@ -1,3 +1,12 @@
+2013-12-22  Martin Robinson  <mrobinson@igalia.com>
+
+        [GTK][CMake] Integrate GResource for inspector files (and others?)
+        https://bugs.webkit.org/show_bug.cgi?id=125569
+
+        Reviewed by Gustavo Noronha Silva.
+
+        * gtk/generate-inspector-gresource-manifest.py: Added.
+
 2013-12-22  Csaba Osztrogonác  <ossy@webkit.org>
 
         Last URTBF after r160971 to make EFL build happy.
