@@ -1,3 +1,13 @@
+2013-12-22  Martin Robinson  <mrobinson@igalia.com>
+
+        [GTK][CMake] Integrate GResource for inspector files (and others?)
+        https://bugs.webkit.org/show_bug.cgi?id=125569
+
+        Reviewed by Gustavo Noronha Silva.
+
+        * GNUmakefile.am: Use the new generation script instead of generating with
+        shell scripting in the makefile.
+
 2013-12-19  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: Frontend Error when selecting Database folder in Resources Sidebar
